# climatic

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
climate/: Logger.py
climate/connections/: Connection.py
climatic/: CoreCli.py  Logger.py
climatic/cli/: Linux.py
climatic/connections/: Connection.py  Ser2Net.py  Ssh.py  Telnet.py
tests/: test_CoreCli.py  test_CoreCli_cli.py  test_CoreCli_run.py
