[metadata]
name = climatic
version = 0.0.1
author = Estevan Vedovelli
author_email = evedovelli@gmail.com
description = Tool to ease and automate CLI usage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evedovelli/climatic
project_urls =
    Bug Tracker = https://github.com/evedovelli/climatic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
